[gd_scene load_steps=7 format=3 uid="uid://c666j2tkqhm1j"]

[ext_resource type="Script" path="res://scripts/paused_menu.gd" id="1_pwvu7"]
[ext_resource type="FontFile" uid="uid://s15272omc2m3" path="res://assets/font/retro.ttf" id="3_lueb7"]
[ext_resource type="Texture2D" uid="uid://bd7u4qpob5r1x" path="res://assets/Entities/Pet Cats Pack/Cat-4/Cat-4-Idle.png" id="3_wfxok"]

[sub_resource type="Animation" id="Animation_eyta0"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 8]
}

[sub_resource type="Animation" id="Animation_6tdid"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lamf0"]
_data = {
"RESET": SubResource("Animation_6tdid"),
"idle": SubResource("Animation_eyta0")
}

[node name="paused_menu" type="CanvasLayer"]
process_mode = 3
process_priority = 1
script = ExtResource("1_pwvu7")

[node name="Panel" type="Panel" parent="."]
texture_filter = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="name" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_lueb7")
theme_override_font_sizes/font_size = 39
text = "Ally cat"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="description" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -184.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_lueb7")
theme_override_font_sizes/font_size = 30
text = "A lost cat trying to find its way ato the vet"
horizontal_alignment = 1
autowrap_mode = 3

[node name="cost" type="Label" parent="Control"]
layout_mode = 1
offset_left = 21.0
offset_top = 16.0
offset_right = 203.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("3_lueb7")
theme_override_font_sizes/font_size = 30
text = "Cost:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="right" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.407
anchor_right = 1.0
anchor_bottom = 0.407
offset_left = -256.0
offset_top = -63.736
offset_right = -128.0
offset_bottom = 64.264
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_lueb7")
theme_override_font_sizes/font_size = 60
text = ">"

[node name="left" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.395
anchor_bottom = 0.395
offset_left = 128.0
offset_top = -55.96
offset_right = 256.0
offset_bottom = 72.04
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_lueb7")
theme_override_font_sizes/font_size = 60
text = "<"

[node name="rent" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -88.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_lueb7")
theme_override_font_sizes/font_size = 30
text = "Rent
"

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(557, 321)
scale = Vector2(14, 12.88)
texture = ExtResource("3_wfxok")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_lamf0")
}
autoplay = "idle"

[connection signal="pressed" from="Control/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Control/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Control/rent" to="." method="_on_rent_pressed"]
